Update src/main/java/com/bogdatech/task/DBTask.java
Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>